--- a/client/src/components/TourneyDetails/GroupConfig/GroupConfig.scss
+++ b/client/src/components/TourneyDetails/GroupConfig/GroupConfig.scss
@@ -9,6 +9,7 @@
         }
         &-groups {
             text-align: center;
+            margin: 2rem 0;
         }
         &-teams-list {
                 display: grid;
