--- a/client/src/commonComponents/Toast/Toast.scss
+++ b/client/src/commonComponents/Toast/Toast.scss
@@ -32,7 +32,7 @@
   background: var(--toast-bg-color);
   z-index: 500;
 
-  transition: display var(--easy-in-out-fast);
+  transition: display var(--ease-in-out-fast);
 
   button {
     padding: 0;
