--- a/client/src/components/PlayerCard/PlayerCard.scss
+++ b/client/src/components/PlayerCard/PlayerCard.scss
@@ -1,6 +1,9 @@
 .player-card {
     width: 100%;
-    margin: 1rem 0;
+    width: -moz-available;
+    width: -webkit-fill-available;
+    width: fill-available;
+    margin: 1rem 0.5rem;
     &-header {
         display: grid;
         grid-template-columns: max-content 1fr;
