Added update details endpoint

--- a/client/src/styles/_themes.scss
+++ b/client/src/styles/_themes.scss
@@ -176,6 +176,7 @@
     --progress-indicator-warning-border-color: var(--error);
 
     --table-border-color: #{$grey-580};
+    --table-border-color-alt: #{$grey-400};
     --table-bg-color: #{$black};
     --table-odd-row-color: #{$grey-650};
 }
