--- a/client/src/components/TourneyDetails/GroupConfig/GroupConfig.scss
+++ b/client/src/components/TourneyDetails/GroupConfig/GroupConfig.scss
@@ -33,5 +33,17 @@
             color: var(--app-highlight);
             font-weight: bold;
         }}
+
+        &-delete-btn {
+            position: fixed;
+            bottom: 1rem;
+            left: 50%;
+            transform: translate(-50%, 0);
+            z-index: 101;
+        }
+
+        &-calendar-accordion {
+            margin-bottom: 1rem;
+        }
     }
 }
