--- a/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
+++ b/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
@@ -46,38 +46,53 @@
     }
     
     &-list {
-        display: grid;
-        grid-template-columns: 1fr max-content 1fr;
-        align-items: center;
-        gap: 1.5rem 0.5rem;
-        margin: 3rem 1rem;
+        margin: 3rem 1rem 5rem;
+        &-header {
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 0.5rem;
+            border-bottom: 2px solid var(--table-border-color-alt);
+        }
+        &-item {
+            display: grid;
+            grid-template-columns: 1fr max-content 1fr;
+            align-items: center;
+            margin-block: 0.75rem;
+            gap: 0 0.5rem;
+        }
+        &-header h4:nth-child(3) {text-align: right; }
         img {
             height: 2rem;
             width: 2rem;
         }
-        .home-det,.time-det,.away-det {
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            white-space: break-spaces;
+        &-item {
+            &> div {
+                display: flex;
+                align-items: center;
+                gap: 0.75rem;
+                white-space: break-spaces;
+            }
+            .home-det {
+                grid-column: 1;
+                justify-content: flex-start;
+            }
+            .time-det {
+                grid-column: 2;
+                justify-content: center;
+                &:active {
+                    background-color: gray;
+                }
+            }
+            .away-det {
+                grid-column: 3;
+                justify-content: flex-end;
+            }
         }
-        .home-det {
-            grid-column: 1;
-            justify-content: flex-start;
-        }
-        .time-det {
-            grid-column: 2;
-            justify-content: center;
-        }
-        .away-det {
-            grid-column: 3;
-            justify-content: flex-end;
-        }
-
     }
 
-    &-add-detail {
-        bottom: 5rem!important;
+    &-icon {
+        &-add, &-save{ bottom: 1rem!important }
+        &-add{ right: 4rem!important }
     }
 
     &-modal {
@@ -86,13 +101,18 @@
             &-type {
                 padding-top: 1rem;
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(2, 1fr);
                 gap: 2rem;
                 justify-content: space-between;
                 text-align: center;
                 & > div {
                     height: max-content;
-                    img { height: 3rem; }
+                    img { height: 4rem; }
+                }
+                &__disabled {
+                    pointer-events: none;
+                    img { filter: grayscale(1);}
+                    figcaption { color: var(--disabled)}
                 }
             }
             &-team {
