--- a/client/src/components/TourneyDetails/TourneyDetails.scss
+++ b/client/src/components/TourneyDetails/TourneyDetails.scss
@@ -1,6 +1,7 @@
 .tourney-details {
     position: relative;
     height: 100%;
+    min-height: 80vh;
     &-footer{
         position: fixed;
         background-color: var(--navigation-bg);
@@ -15,4 +16,5 @@
             width: auto;
         }
     }
+    .cc-progress-loader { bottom: 0}
 }
