--- a/client/src/components/TourneyDetails/TourneyDetails.scss
+++ b/client/src/components/TourneyDetails/TourneyDetails.scss
@@ -5,7 +5,7 @@
     &-footer{
         position: fixed;
         background-color: var(--navigation-bg);
-        bottom: 0;
+        bottom: -1px;
         width: 100%;
         display: flex;
         justify-content: space-between;
