First approach knout

--- a/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
+++ b/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
@@ -50,6 +50,7 @@
             gap: 0 0.5rem;
             justify-content: flex-start;
             align-items: center;
+            .cc-icon { height: 1rem;}
             svg {
                 height: 1rem;
                 width: auto;
