--- a/client/src/components/TourneyDetails/KnockoutConfig/KnockoutConfig.scss
+++ b/client/src/components/TourneyDetails/KnockoutConfig/KnockoutConfig.scss
@@ -32,5 +32,10 @@
                 }
             }
         }
+
+        &-next-stage {
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
 }
