--- a/client/src/views/Home/Home.scss
+++ b/client/src/views/Home/Home.scss
@@ -1,10 +1,14 @@
 .home-container {
+    padding-top: 0.5rem;
     padding-bottom: 4rem;
     margin: 8rem 4rem 0;
     min-height: calc(100vh - 8rem);
     height: 100%;
     @media screen and (max-width: 576px){
         margin: 4rem 0 0;
+    }
+    &-filter {
+        margin: 0 0.5rem;
     }
     .add-new {
         position: fixed;
