--- a/client/src/views/Login/Login.scss
+++ b/client/src/views/Login/Login.scss
@@ -6,6 +6,7 @@
     .login-card {
         width: 100%;
         max-width: 32rem;
+        margin: 0 1rem;
         background: var(--login-bg);
         border: 1px solid var(--border-color);
         padding: 2rem;
