--- a/client/src/components/PlayerForm/PlayerForm.scss
+++ b/client/src/components/PlayerForm/PlayerForm.scss
@@ -1,7 +1,7 @@
 .player-form {
     position: relative;
     height: 100%;
-    margin: 0 0.5rem;
+    margin: 0 5%;
     & > form {
         position: relative;
         padding-bottom: 6rem;
