--- a/client/src/components/TeamForm/TeamForm.scss
+++ b/client/src/components/TeamForm/TeamForm.scss
@@ -19,10 +19,10 @@
         }
     }
     & > h1 {
-        margin: 0 0.5rem;
+        margin: 0 5%;
     }
     &-fields {
-        margin: 0 0.5rem;
+        margin: 0 5%;
     }
     &-new-player {
         text-align: right;
