--- a/client/src/components/TourneyDetails/GroupConfig/GroupConfig.scss
+++ b/client/src/components/TourneyDetails/GroupConfig/GroupConfig.scss
@@ -3,13 +3,21 @@
         width: 100%;
     }
     &-content {
-        margin: 1rem 0.5rem;
+        margin: 1rem 5%;
+        @media screen and (min-width: 768px) {
+            margin: 1rem;
+        }
         .cc-form-field {
             margin: 1rem 0;
         }
         &-groups {
             text-align: center;
-            margin: 2rem 0;
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 2rem;
+            @media screen and (min-width: 1024px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
         }
         &-teams-list {
                 display: grid;
