--- a/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
+++ b/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
@@ -47,7 +47,7 @@
         .home-team,
         .away-team {
             display: flex;
-            gap: 0 0.5rem;
+            gap: 0 5%;
             justify-content: flex-start;
             align-items: center;
             .cc-icon { height: 1rem;}
