--- a/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
+++ b/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
@@ -58,7 +58,7 @@
             grid-template-columns: 1fr max-content 1fr;
             align-items: center;
             margin-block: 0.75rem;
-            gap: 0 0.5rem;
+            gap: 0 5%;
         }
         &-header h4:nth-child(3) {text-align: right; }
         img {
