--- a/client/src/components/TourneyDetails/TourneyDetails.scss
+++ b/client/src/components/TourneyDetails/TourneyDetails.scss
@@ -1,20 +1,27 @@
 .tourney-details {
-    position: relative;
-    height: 100%;
-    min-height: 80vh;
+    margin-bottom: 3rem;
+    @media screen and (min-width: 768px) {
+        margin-left: 5rem;
+    }
+
     &-footer{
-        position: fixed;
-        background-color: var(--navigation-bg);
-        bottom: -1px;
-        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
         padding: 1rem 0.5rem;
+        background-color: var(--navigation-bg);
+
+        @media screen and (min-width: 768px) {
+            width: calc(100% - 5rem);
+        }
+
         svg {
             height: 1.25rem!important;
             width: auto;
         }
     }
-    .cc-progress-loader { bottom: 0}
+    .cc-progress-loader { bottom: 0 }
 }
