--- a/client/src/views/Home/Home.scss
+++ b/client/src/views/Home/Home.scss
@@ -1,14 +1,8 @@
 .home-container {
-    padding-top: 0.5rem;
-    padding-bottom: 4rem;
-    margin: 8rem 4rem 0;
-    min-height: calc(100vh - 8rem);
-    height: 100%;
-    @media screen and (max-width: 576px){
-        margin: 4rem 0 0;
-    }
+    padding-block: 0.5rem 3rem;
+    margin-block: 4rem 0;
     &-filter {
-        margin: 0 0.5rem;
+        margin: 0 5%;
     }
     .add-new {
         position: fixed;
@@ -16,7 +10,7 @@
         right: 0.5rem;
         .cc-icon {
             color: var(--app-highlight);
-            box-shadow: 0 0 0.5rem var(--app-bg);
+            box-shadow: 0 0 5% var(--app-bg);
             border-radius: 50%;
             background: var(--app-bg);
             svg {
