--- a/client/src/views/Tournaments/Tournaments.scss
+++ b/client/src/views/Tournaments/Tournaments.scss
@@ -1,5 +1,18 @@
-.tournament-page-container {
-    & > article {
-        margin: 0 0.5rem;
+.tournament-page {
+    &-main {
+        margin: 0 5%;
+        @media screen and (min-width: 768px) {
+            margin: 0 2rem 0 7rem;
+        }
+
+        &-cards {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 1rem;
+            @media screen and (min-width: 768px) {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 2rem;
+            }
+        }
     }
 }
