Tourney screen styling done

--- a/client/src/components/TourneyCard/TourneyCard.scss
+++ b/client/src/components/TourneyCard/TourneyCard.scss
@@ -3,6 +3,7 @@
     &-header {
         display: flex;
         flex-flow: row nowrap;
+        gap: 0.5rem;
     }
     &-body {
         width: 100%;
