--- a/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
+++ b/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
@@ -2,7 +2,7 @@
     &-header {
         display: grid;
         align-items: center;
-        grid-template-columns: repeat(3, 33%);
+        grid-template-columns: 1fr max-content 1fr;
         width: 100%;
         text-align: center;
     }
@@ -48,10 +48,12 @@
     &-list {
         margin: 3rem 1rem 5rem;
         &-header {
-            display: flex;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: 1fr max-content 1fr;
+            align-items: center;
             padding-bottom: 0.5rem;
             border-bottom: 2px solid var(--table-border-color-alt);
+            text-align: center;
         }
         &-item {
             display: grid;
@@ -60,7 +62,6 @@
             margin-block: 0.75rem;
             gap: 0 5%;
         }
-        &-header h4:nth-child(3) {text-align: right; }
         img {
             height: 2rem;
             width: 2rem;
@@ -69,24 +70,18 @@
             &> div {
                 display: flex;
                 align-items: center;
+                justify-content: center;
                 gap: 0.75rem;
                 white-space: break-spaces;
             }
-            .home-det {
-                grid-column: 1;
-                justify-content: flex-start;
-            }
+            .home-det { grid-column: 1;}
             .time-det {
                 grid-column: 2;
-                justify-content: center;
                 &:active {
                     background-color: gray;
                 }
             }
-            .away-det {
-                grid-column: 3;
-                justify-content: flex-end;
-            }
+            .away-det { grid-column: 3;}
         }
     }
 
@@ -96,6 +91,8 @@
     }
 
     &-modal {
+        margin: 0 5%;
+        max-width: 30rem;
         &-body {
             width: 100%;
             &-type {
