--- a/client/src/components/TourneyDetails/TourneyDetails.scss
+++ b/client/src/components/TourneyDetails/TourneyDetails.scss
@@ -11,11 +11,12 @@
         width: 100%;
         position: fixed;
         bottom: 0;
-        padding: 1rem 0.5rem;
+        padding: 1rem 5%;
         background-color: var(--navigation-bg);
 
         @media screen and (min-width: 768px) {
             width: calc(100% - 5rem);
+            padding: 1rem 2rem;
         }
 
         svg {
