--- a/client/src/views/Tournaments/Tournaments.scss
+++ b/client/src/views/Tournaments/Tournaments.scss
@@ -1,6 +1,7 @@
 .tournament-page {
     &-main {
         margin: 0 5%;
+        padding-top: 2rem;
         @media screen and (min-width: 768px) {
             margin: 0 2rem 0 7rem;
         }
