Move png to webp

--- a/client/src/components/DeleteConfirmation/DeleteConfirmation.scss
+++ b/client/src/components/DeleteConfirmation/DeleteConfirmation.scss
@@ -1,5 +1,5 @@
 .delete-modal {
-    width: min-content;
+    width: fit-content;
     &-body {
         display: flex;
         justify-content: space-around;
