--- a/client/src/views/Teams/Teams.scss
+++ b/client/src/views/Teams/Teams.scss
@@ -1,3 +1,22 @@
-.team-page-container-filter {
-    margin: 0 5%;
+.team-page {
+    &-main {
+        margin: 0 5%;
+        padding-top: 2rem;
+        @media screen and (min-width: 768px) {
+            margin: 0 2rem 0 7rem;
+        }
+        @media screen and (min-width: 1366px) {
+            margin-left: calc(7rem + var(--page-side-space));
+            margin-right: calc(2rem + var(--page-side-space));
+        }
+        &-cards {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 1rem;
+            @media screen and (min-width: 1024px) {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 2rem;
+            }
+        }
+    }
 }
