--- a/client/src/views/Tournaments/Tournaments.scss
+++ b/client/src/views/Tournaments/Tournaments.scss
@@ -5,6 +5,10 @@
         @media screen and (min-width: 768px) {
             margin: 0 2rem 0 7rem;
         }
+        @media screen and (min-width: 1366px) {
+            margin-left: calc(7rem + var(--page-side-space));
+            margin-right: calc(2rem + var(--page-side-space));
+        }
 
         &-cards {
             display: grid;
