--- a/client/src/components/PlayerForm/PlayerForm.scss
+++ b/client/src/components/PlayerForm/PlayerForm.scss
@@ -1,22 +1,28 @@
 .player-form {
-    position: relative;
-    height: 100%;
-    margin: 0 5%;
-    & > form {
-        position: relative;
-        padding-bottom: 6rem;
-    }
-    .cc-form-field {
-        margin: 1.5rem 0;
-    }
-    .img-container {
+    padding-top: 2rem;
+
+    &-img-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-top: 1rem;
+        margin-block: 1rem;
         img {
             height: 4rem;
             width: auto;
+        }
+    }
+
+    &-container {
+        margin: 0 5% 3rem;
+        .cc-form-field {
+            margin: 1.5rem 0;
+        }
+        @media screen and (min-width: 768px) {
+            margin: 0 2rem 0 7rem;
+        }
+        @media screen and (min-width: 1366px) {
+            margin-left: calc(7rem + var(--page-side-space));
+            margin-right: calc(2rem + var(--page-side-space));
         }
     }
 
@@ -24,7 +30,6 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
-        .cc-form-field { margin: 0;}
     }
 
     &-new-player {
@@ -48,15 +53,17 @@
 
     &-action-buttons {
         display: flex;
-        width: calc(100%);
         justify-content: space-between;
+        align-items: center;
+        width: 100%;
         position: fixed;
-        background-color: var(--navigation-bg);
         bottom: 0;
-        padding: 1rem 0rem;
-        margin: 0 -0.5rem;
-        button {
-            margin: 0 1rem;
+        padding: 1rem 2rem;
+        background-color: var(--navigation-bg);
+
+        @media screen and (min-width: 768px) {
+            width: calc(100% - 5rem);
+            left: 5rem;
         }
     }
 }
