Group stage manual

--- a/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
+++ b/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
@@ -55,6 +55,9 @@
                 width: auto;
             }
         }
+        .finished {
+            pointer-events: none;
+        }
         span {
             white-space: nowrap;
             overflow: hidden;
