--- a/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
+++ b/client/src/components/TourneyDetails/MatchCard/MatchCard.scss
@@ -9,11 +9,13 @@
     }
     &-grid {  
         display: grid;
-        grid-template-columns: 1fr max-content 1fr;
+        grid-template-columns: 37.5% max-content 37.5%;
         grid-template-rows: 1fr max-content 1fr;
         grid-auto-columns: 1fr;
         gap: 1rem 1.5rem;
         grid-auto-flow: row;
+        justify-content: center;
+        align-items: center;
         grid-template-areas:
             "date-logo print-logo details-logo"
             "home-team . results"
