--- a/client/src/components/PlayerForm/PlayerForm.scss
+++ b/client/src/components/PlayerForm/PlayerForm.scss
@@ -30,6 +30,22 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
+        .cc-form-field { margin: 0;}
+        margin: 1.5rem 0;
+    }
+
+    &-list {
+        display: flex;
+        justify-content: flex-start;
+        .cc-list, .cc-list li {
+            padding: 0 1rem;
+        }
+        &-sanction {
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+            gap: 1.5rem;
+        }
     }
 
     &-new-player {
