--- a/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
+++ b/client/src/components/TourneyDetails/MatchDetails/MatchDetails.scss
@@ -49,7 +49,7 @@
         margin: 3rem 1rem 5rem;
         &-header {
             display: grid;
-            grid-template-columns: 1fr max-content 1fr;
+            grid-template-columns: 1fr 40px 1fr;
             align-items: center;
             padding-bottom: 0.5rem;
             border-bottom: 2px solid var(--table-border-color-alt);
@@ -57,7 +57,7 @@
         }
         &-item {
             display: grid;
-            grid-template-columns: 1fr max-content 1fr;
+            grid-template-columns: 1fr 40px 1fr;
             align-items: center;
             margin-block: 0.75rem;
             gap: 0 5%;
