--- a/client/src/components/TeamCard/TeamCard.scss
+++ b/client/src/components/TeamCard/TeamCard.scss
@@ -1,9 +1,18 @@
 .team-card {
     width: 100%;
-    margin-block: 1rem;
+    width: -moz-available;
+    width: -webkit-fill-available;
+    width: fill-available;
+    margin: 1rem 0.5rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
     &-header {
-        display: grid;
-        grid-template-columns: max-content max-content 1fr;
+        h2{
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
         gap: 1rem;
         &-player-count {
             display: flex;
